# lw-mavsdk

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
flight_control/: .battery-fence-common.c.swp  battery-fence-common.c  battery_fence.h
inc/: .lwmavsdk.h.swp  conn_certikos_user.h  conn_posix.h  lwmavsdk-target.h  lwmavsdk.h  target.h
python_code/: battery_monitoring.py  fly.py  fly_simple.py
src/: .protocol.c.swp  CMakeLists.txt  command.c  command_factory.c  connection.c  connection_factory.c  microservice.c  protocol.c  vehicle.c
src/certikos_user/: partee.c  serial.c  thinros.c
src/posix/: serial.c  udp.c  udp_client.c
tests/: CMakeLists.txt  battery-fence-common.c  main-battery-fence-udp.c  main-battery-fence-udpclient.c  main-battery-fence.c  main-get-home-position-command.c  main-get-home-position-protocol.c  main-get-home-position.c  main-posix-uart-decoder.cc  main-posix-uart-hex.cc  main-posix-udp-decoder.cc  main-posix-udpclient-decoder.cc  test_posix_serial.cc
